--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -9,7 +9,7 @@
     <nav>
         <div id="memberNavbar" class="d-flex">
             <h5 id="userName">{{fullName}}您好</h5>
-            <button class="btn" @@click="showSweetAlert">
+            <button class="btn">
                 登出
                 <span class="first"></span>
                 <span class="second"></span>
@@ -181,17 +181,17 @@
                             <div id="x" class="col-lg-9 d-flex">
                                 <div class="row">
                                     <div class="col-lg-6">您的會員等級:</div>
-                                    <div class="col-lg-3">{{upgradeLev}}</div>
+                                    <div class="col-lg-3">{{memberInfo.levelName}}</div>
 
                                     <div class="col-lg-6">累積消費金額:</div>
-                                    <div class="col-lg-6">${{countPrice}}元</div>
+                                    <div class="col-lg-6">${{memberInfo.memberPoint}}元</div>
                                 </div>
                             </div>
 
                             <h3 id="bar">累計進度bar</h3>
                             <div>
                                 <div class="progressWrapper">
-                                    <progress id="progress" :value="countPrice" :max="upgradeVal"></progress>
+                                    <progress id="progress" :value="memberInfo.memberPoint" :max="upgradeVal"></progress>
                                     <div class="progressLabels">
                                         <span>0</span>
                                         <span>{{upgradeVal}}</span>
@@ -290,7 +290,6 @@
             data: {
                 memberInfo: [],
                 orderInfo: [],
-                price: 0,
                 upgradeValue: 0,
                 remainingValue: 0,
                 dis: true,
@@ -299,29 +298,11 @@
             },
             computed: {
                 //進度條計算
-                countPrice: function () {
-                    for (let order of this.memberInfo.orders) {
-                        this.price += order.finalPrice;
-                    }
-                    return this.price;
-                },
                 dataContent: function () {
-                    this.remainingValue = this.upgradeValue - this.price;
+                    this.remainingValue = this.upgradeValue - this.memberInfo.memberPoint;
                     return this.remainingValue > 0 ? `還需消費 ${this.remainingValue} 元才能升級至下一個階級` : "已達到最高等級";
                 },
                 //等級計算
-                upgradeLev: function () {
-                    if (this.price < 10000) {
-                        this.memberInfo.levelDiscount = 0.95;
-                        return this.memberInfo.levelName = "平民";
-                    } else if (this.price >= 10000 && this.price < 20000) {
-                        this.memberInfo.levelDiscount = 0.9;
-                        return this.memberInfo.levelName = "貴族";
-                    } else {
-                        this.memberInfo.levelDiscount = 0.8;
-                        return this.memberInfo.levelName = "皇家";
-                    }
-                },
                 upgradeVal: function () {
                     if (this.memberInfo.levelName === "平民") {
                         return this.upgradeValue = 10000;
@@ -342,6 +323,7 @@
                 },
             },
             methods: {
+                //sweet alert
                 handleModalClose:function() {
                     document.body.classList.add('modal-closed');
                 },
@@ -358,6 +340,7 @@
                         
                     })
                 },
+                //修改資料
                 submitInfo: function () {
                     var request = {
                         FirstName: this.memberInfo.firstName,
@@ -368,9 +351,10 @@
                         Birthday: this.memberInfo.birthday,
                         Gender: this.memberInfo.gender,
                     };
-                    axios.put("https://localhost:7071/api/member/EditMemberInfo", request)
+                    axios.put("/api/member/EditMemberInfo", request)
                         .then()
                 },
+                //按鈕樣式修改
                 modify:
                     function () {
                         if (this.buttonText == "修改會員資料") {
@@ -389,17 +373,9 @@
                             return this.dis = true;
                         };
                     },
-                upgrade: function () {
-                    var request = {
-                        LevelName: this.memberInfo.levelName,
-                        levelDiscount: this.memberInfo.levelDiscount
-                    };
-                    axios.put("https://localhost:7071/api/member/WriteLev", request)
-                        .then()
-                },
                 getDetails: function (selectedOrderId) {
                     let _this = this;
-                    axios.get("https://localhost:7071/api/member/GetOrder")
+                    axios.get("/api/member/GetOrder")
                         .then(response => {
                             _this.orderInfo = response.data;
                             _this.selectedOrderId = selectedOrderId
@@ -408,10 +384,10 @@
                         })
                 },
             },
-            mounted:
+            created:
                 function () {
                     let _this = this;
-                    axios.get("https://localhost:7071/api/member/GetMember")
+                    axios.get("/api/member/GetMember")
                         .then(response => {
                             _this.memberInfo = response.data;
                         })
